--- a/app/src/main/res/layout/onboarding_step2.xml
+++ b/app/src/main/res/layout/onboarding_step2.xml
@@ -33,7 +33,7 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:background="@drawable/onboarding_1_bg"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="280dp"
+        android:layout_marginTop="260dp"
         android:visibility="gone"/>
 
     <ImageView
@@ -101,7 +101,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="440dp"/>
+        android:layout_marginTop="410dp"/>
 
     <TextView
         android:id="@+id/onboarding_step2_skip"
