[Implement Features] 이미지 null 예외처리, 디자인 수정

--- a/app/src/main/res/layout/fragment_curator.xml
+++ b/app/src/main/res/layout/fragment_curator.xml
@@ -19,8 +19,8 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="19dp"
-            android:layout_marginBottom="29dp"
+            android:layout_marginTop="14dp"
+            android:layout_marginBottom="14dp"
             android:fontFamily="@font/notosanscjkkr_regular"
             android:gravity="center"
             android:includeFontPadding="false"
@@ -52,6 +52,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
                 android:fontFamily="@font/notosanscjkkr_demilight"
                 android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
@@ -66,7 +67,7 @@
                 android:id="@+id/fragment_curator_rv_recommend"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="11dp"
+                android:layout_marginTop="10dp"
                 android:clipToPadding="false"
                 android:orientation="horizontal"
                 android:paddingLeft="16dp"
@@ -81,13 +82,13 @@
                 android:id="@+id/fragment_curator_tv_gamsung"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="32dp"
                 android:background="@drawable/et_area_keyword"
+                android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center_horizontal"
+                android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
-                android:fontFamily="@font/notosanscjkkr_regular"
-                android:includeFontPadding="false"
                 android:paddingTop="16dp"
                 android:paddingBottom="15dp"
                 android:text="감성자극"
@@ -203,11 +204,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="40dp"
-                android:letterSpacing="-0.02"
-                android:lineSpacingExtra="9sp"
+                android:layout_marginTop="43dp"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:includeFontPadding="false"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="9sp"
                 android:text="테마 속 큐레이터"
                 android:textColor="@color/black_two"
                 android:textSize="19sp"
@@ -218,7 +219,7 @@
                 android:id="@+id/fragment_curator_theme1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="19dp"
+                android:layout_marginTop="21dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView22">
@@ -337,7 +338,7 @@
                     android:fontFamily="@font/notosanscjkkr_demilight"
                     android:includeFontPadding="false"
                     android:letterSpacing="-0.02"
-                    android:text="흔들리는 꽃들 속에서 네 샴푸향이 느껴진거야 스쳐 지나간건가 뒤돌아보는 문장 "
+                    android:text="마음 속 장마를 막아줄 우산 같은 문장"
                     android:textColor="#ffffff"
                     android:textSize="19sp"
                     app:layout_constraintEnd_toEndOf="parent"
