--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,9 +20,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="27dp"
-            android:layout_marginBottom="267dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="58dp"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/login_img_marks" />
 
         <TextView
@@ -89,6 +89,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#b2f8f5ed"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
