--- a/app/src/main/res/layout/activity_service_terms.xml
+++ b/app/src/main/res/layout/activity_service_terms.xml
@@ -2063,11 +2063,10 @@
         android:id="@+id/activity_service_terms_top_blur"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/activity_service_terms_btn_back"
+        app:layout_constraintTop_toTopOf="@+id/activity_service_terms_sv"
         app:srcCompat="@drawable/my_settings_service_box_blur_top" />
 
     <ImageView
