--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -238,11 +238,12 @@
                 android:id="@+id/rv_sentence_detail_view_theme_other_sentence"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="28dp"
                 android:orientation="vertical"
                 android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tv_theme_other_sentence"
                 tools:itemCount="2"
@@ -252,7 +253,7 @@
                 android:id="@+id/btn_go_to_theme"
                 android:layout_width="350dp"
                 android:layout_height="46dp"
-                android:layout_marginTop="21dp"
+                android:layout_marginTop="35dp"
                 android:background="@drawable/background_sentence_detail_view_theme"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
