[Implement Features] 회원가입 3단계 뷰 수정

--- a/app/src/main/res/layout/activity_join_step3.xml
+++ b/app/src/main/res/layout/activity_join_step3.xml
@@ -229,6 +229,7 @@
                 android:background="@drawable/et_circle_join3_off"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center"
+                android:imeOptions="actionNext"
                 android:includeFontPadding="false"
                 android:inputType="number"
                 android:letterSpacing="-0.02"
@@ -241,7 +242,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/view_empty5"/>
+                app:layout_constraintTop_toBottomOf="@+id/view_empty5" />
 
             <EditText
                 android:id="@+id/activity_join_step3_et_code2"
@@ -251,12 +252,13 @@
                 android:background="@drawable/et_circle_join3_off"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center"
+                android:imeOptions="actionNext"
                 android:includeFontPadding="false"
                 android:inputType="number"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
-                android:nextFocusDown="@id/activity_join_step3_et_code3"
+                android:nextFocusRight="@id/activity_join_step3_et_code2"
                 android:textColor="@color/soft_green"
                 android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code3"
@@ -272,12 +274,12 @@
                 android:background="@drawable/et_circle_join3_off"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center"
+                android:imeOptions="actionNext"
                 android:includeFontPadding="false"
                 android:inputType="number"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
-                android:nextFocusDown="@id/activity_join_step3_et_code4"
                 android:textColor="@color/soft_green"
                 android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code4"
@@ -293,12 +295,12 @@
                 android:background="@drawable/et_circle_join3_off"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center"
+                android:imeOptions="actionNext"
                 android:includeFontPadding="false"
                 android:inputType="number"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
-                android:nextFocusDown="@id/activity_join_step3_et_code5"
                 android:textColor="@color/soft_green"
                 android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code5"
@@ -314,12 +316,12 @@
                 android:background="@drawable/et_circle_join3_off"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center"
+                android:imeOptions="actionNext"
                 android:includeFontPadding="false"
                 android:inputType="number"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="5sp"
                 android:maxLength="1"
-                android:nextFocusDown="@id/activity_join_step3_et_code6"
                 android:textColor="@color/soft_green"
                 android:textSize="19sp"
                 app:layout_constraintEnd_toStartOf="@+id/activity_join_step3_et_code6"
@@ -335,6 +337,7 @@
                 android:background="@drawable/et_circle_join3_off"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:gravity="center"
+                android:imeOptions="actionNext"
                 android:includeFontPadding="false"
                 android:inputType="number"
                 android:letterSpacing="-0.02"
@@ -346,6 +349,33 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_et_code5"
                 app:layout_constraintTop_toTopOf="@+id/activity_join_step3_et_code5" />
+
+            <ImageView
+                android:id="@+id/activity_join_step3_ic_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="7dp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="@+id/activity_join_step3_et_code1"
+                app:layout_constraintTop_toBottomOf="@+id/activity_join_step3_et_code1"
+                app:srcCompat="@drawable/ic_warning" />
+
+            <TextView
+                android:id="@+id/activity_join_step3_tv_error"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/notosanscjkkr_demilight"
+                android:includeFontPadding="false"
+                android:letterSpacing="-0.04"
+                android:text="잘못된 코드에요! 다시 입력해주세요!"
+                android:textColor="@color/reddish"
+                android:textSize="14sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_join_step3_ic_error"
+                app:layout_constraintStart_toEndOf="@+id/activity_join_step3_ic_error"
+                app:layout_constraintTop_toTopOf="@+id/activity_join_step3_ic_error" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
