--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,6 +104,7 @@
             android:layout_marginEnd="28dp"
             android:background="@drawable/et_area"
             android:ems="10"
+            android:nextFocusDown="@+id/activity_login_et_pass"
             android:fontFamily="@font/notosanscjkkr_demilight"
             android:hint="이메일을 입력해주세요."
             android:includeFontPadding="false"
@@ -114,6 +115,7 @@
             android:paddingTop="12dp"
             android:paddingRight="16dp"
             android:paddingBottom="12dp"
+            android:singleLine="true"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -140,6 +142,7 @@
             android:paddingTop="12dp"
             android:paddingRight="16dp"
             android:paddingBottom="12dp"
+            android:singleLine="true"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
