--- a/app/src/main/res/layout/item_library_thema.xml
+++ b/app/src/main/res/layout/item_library_thema.xml
@@ -11,9 +11,10 @@
         android:background="#59bcbcbc"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="@id/const_item_sentence" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/const_item_sentence"
         android:layout_width="match_parent"
         android:layout_height="98dp"
         android:layout_marginHorizontal="16dp"
