--- a/app/src/main/res/layout/activity_detail_theme.xml
+++ b/app/src/main/res/layout/activity_detail_theme.xml
@@ -18,10 +18,12 @@
 
     <ImageView
         android:id="@+id/img_detail_theme_activity_back_btn"
-        android:layout_width="20dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="26dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="17dp"
+        android:paddingTop="16dp"
+        android:paddingEnd="23dp"
+        android:paddingBottom="16dp"
         android:src="@drawable/theme_btn_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView5" />
@@ -30,8 +32,8 @@
         android:id="@+id/tv_main_theme_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="34dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="19dp"
         android:text="브랜딩이 어려울 때, 영감을 주는 문장"
         android:textColor="@color/white"
         android:textSize="20sp"
@@ -74,13 +76,12 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:layout_marginEnd="23dp"
         android:text="14"
         android:textColor="@color/white"
         android:textSize="25sp"
-        app:layout_constraintEnd_toStartOf="@+id/textView11"
-        app:layout_constraintTop_toBottomOf="@+id/tv_main_theme_title" />
+        app:layout_constraintBottom_toTopOf="@+id/textView140"
+        app:layout_constraintEnd_toStartOf="@+id/textView11" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -88,24 +89,27 @@
         android:text="북마크"
         android:textColor="@color/white"
         android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView140"
         app:layout_constraintEnd_toEndOf="@+id/textView11"
         app:layout_constraintStart_toStartOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <TextView
+        android:id="@+id/textView140"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="문장"
         android:textColor="@color/white"
         android:textSize="13sp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="@+id/textView12"
-        app:layout_constraintStart_toStartOf="@+id/textView12"
-        app:layout_constraintTop_toBottomOf="@+id/textView12" />
+        app:layout_constraintStart_toStartOf="@+id/textView12" />
 
     <ImageView
+        android:id="@+id/imageView46"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="22dp"
         android:src="@drawable/background_detail_theme_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -115,11 +119,10 @@
         android:id="@+id/activity_join_step2_sv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="18dp"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView7">
+        app:layout_constraintTop_toBottomOf="@+id/imageView5">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -127,17 +130,39 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_activity_theme"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:overScrollMode="never"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:layout_editor_absoluteY="13dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 tools:listitem="@layout/item_detail_theme" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
+
+    <ImageView
+        android:id="@+id/imageView45"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView46"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:srcCompat="@drawable/top_blur" />
+
+    <ImageView
+        android:id="@+id/imageView47"
+        android:layout_width="0dp"
+        android:layout_height="128dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/btn_gradient" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
@@ -150,8 +175,8 @@
 
         <ImageView
             android:id="@+id/imageView8"
-            android:layout_width="77dp"
-            android:layout_height="57dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:src="@drawable/theme_info_btn_bookmark"
             app:layout_constraintStart_toStartOf="parent"
@@ -159,11 +184,13 @@
 
         <ImageView
             android:id="@+id/img_writing_sentence_in_theme_btn"
-            android:layout_width="258dp"
+            android:layout_width="0dp"
             android:layout_height="57dp"
+            android:layout_marginStart="13dp"
             android:layout_marginEnd="16dp"
             android:src="@drawable/btn_green"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView8"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -174,7 +201,7 @@
             android:textColor="@color/white"
             android:textSize="19sp"
             app:layout_constraintBottom_toBottomOf="@+id/img_writing_sentence_in_theme_btn"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/img_writing_sentence_in_theme_btn"
             app:layout_constraintStart_toStartOf="@+id/img_writing_sentence_in_theme_btn"
             app:layout_constraintTop_toTopOf="@+id/img_writing_sentence_in_theme_btn" />
 
