[Implement Features] - 문장상세보기뷰 : 수정 ~ ing

--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -187,6 +187,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView35" />
 
             <TextView
+                android:id="@+id/tv_author"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="11dp"
@@ -208,6 +209,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/imageView21" />
 
             <TextView
+                android:id="@+id/tv_publisher"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="11dp"
