--- a/app/src/main/res/layout/activity_sentence_detail_view.xml
+++ b/app/src/main/res/layout/activity_sentence_detail_view.xml
@@ -18,7 +18,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -47,12 +46,31 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="17dp"
+                android:layout_marginTop="19dp"
+                android:src="@drawable/theme_btn_back"
+                app:layout_constraintStart_toStartOf="@+id/imageView13"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/imageView46"
+                android:layout_width="match_parent"
+                android:layout_height="30dp"
+                android:layout_marginTop="23dp"
+                android:src="@drawable/background_detail_theme_rounded"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_theme" />
+
             <TextView
                 android:id="@+id/tv_theme"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginBottom="19dp"
+                android:layout_marginStart="28dp"
+                android:layout_marginTop="80dp"
                 android:fontFamily="@font/notosanscjkkr_regular"
                 android:includeFontPadding="false"
                 android:letterSpacing="-0.02"
@@ -60,8 +78,8 @@
                 android:text="브랜딩이 어려울 때, 영감을 주는 문장"
                 android:textColor="@color/white"
                 android:textSize="19sp"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView13"
-                app:layout_constraintStart_toStartOf="@+id/imageView13" />
+                app:layout_constraintStart_toStartOf="@+id/imageView13"
+                app:layout_constraintTop_toTopOf="@+id/imageView13" />
 
             <ImageView
                 android:id="@+id/imageView17"
@@ -169,11 +187,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="25dp"
                 android:layout_marginTop="12dp"
-                android:text="오체불만족"
-                android:textSize="15sp"
-                android:textColor="@color/black"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="7sp"
+                android:text="오체불만족"
+                android:textColor="@color/black"
+                android:textSize="15sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView20"
                 app:layout_constraintTop_toTopOf="@+id/imageView20" />
 
@@ -191,11 +209,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="11dp"
-                android:textSize="13sp"
-                android:textColor="@color/black"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
                 android:text="이예슬"
+                android:textColor="@color/black"
+                android:textSize="13sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView21"
                 app:layout_constraintTop_toTopOf="@+id/imageView21" />
 
@@ -213,11 +231,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="11dp"
-                android:text="몽글하우스"
-                android:textSize="13sp"
-                android:textColor="@color/black"
                 android:letterSpacing="-0.02"
                 android:lineSpacingExtra="6sp"
+                android:text="몽글하우스"
+                android:textColor="@color/black"
+                android:textSize="13sp"
                 app:layout_constraintStart_toEndOf="@+id/imageView22"
                 app:layout_constraintTop_toTopOf="@+id/imageView22" />
 
