--- a/app/src/main/res/layout/activity_join_step3.xml
+++ b/app/src/main/res/layout/activity_join_step3.xml
@@ -102,9 +102,10 @@
         android:layout_marginTop="26dp"
         android:layout_marginBottom="10dp"
         android:fillViewport="true"
-        android:overScrollMode="never"
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:overScrollMode="never"
+        android:paddingBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/activity_join_step3_btn_popup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -356,7 +357,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="7dp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintStart_toStartOf="@+id/activity_join_step3_et_code1"
                 app:layout_constraintTop_toBottomOf="@+id/activity_join_step3_et_code1"
                 app:srcCompat="@drawable/ic_warning" />
@@ -372,7 +373,7 @@
                 android:text="잘못된 코드에요! 다시 입력해주세요!"
                 android:textColor="@color/reddish"
                 android:textSize="14sp"
-                android:visibility="gone"
+                android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/activity_join_step3_ic_error"
                 app:layout_constraintStart_toEndOf="@+id/activity_join_step3_ic_error"
                 app:layout_constraintTop_toTopOf="@+id/activity_join_step3_ic_error" />
