--- a/app/src/main/res/layout/item_today_sentence.xml
+++ b/app/src/main/res/layout/item_today_sentence.xml
@@ -80,6 +80,7 @@
             android:includeFontPadding="false"
             android:letterSpacing="-0.02"
             android:lineSpacingExtra="1sp"
+            android:singleLine="true"
             android:text="호주머니 속의 축제"
             android:textColor="@color/very_light_pink_two"
             android:textSize="14sp"
