--- a/app/src/main/res/layout/activity_detail_theme.xml
+++ b/app/src/main/res/layout/activity_detail_theme.xml
@@ -21,6 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginTop="22dp"
+        android:scaleType="fitXY"
         android:src="@drawable/background_detail_theme_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
